# axum_sea_orm_starter

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
migration/: Cargo.toml
src/: main.rs
src/entities/: chef.rs
