[package]
name = "axum_sea_orm_starter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
dotenvy = "0.15.7"
log = "0.4.19"
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = "1.0.164"
serde_json = "1.0.99"
tokio = {version = "1.28.2", features = ["full"]}
tower = "0.4.13"
